<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_intro" />

    <TextView
        android:id="@+id/minifood1"
        android:layout_width="235dp"
        android:layout_height="74dp"
        android:text="@string/Minifood"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        tools:text="@string/Minifood" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="378dp"
        android:layout_height="277dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minifood1"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/enjoyeat"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_marginTop="68dp"
        android:text="@string/EnjoyEating"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/EnjoyEating" />

    <Button
        android:id="@+id/startbot"
        android:layout_width="261dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:text="@string/Get_started"
        android:textColor="#100F0F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoyeat" />

</androidx.constraintlayout.widget.ConstraintLayout>